fixing spacing between the navigation links

--- a/css/scss/modules/marketing/_navigation.scss
+++ b/css/scss/modules/marketing/_navigation.scss
@@ -48,10 +48,10 @@
         padding: 1em;
         margin-left: 1.4em;
         white-space: nowrap;
+        height: 100%;
 
         a {
           display: block;
-          width: 60px;
           height: 100%;
           color: #5d5d5d;
         }
